# LANRage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pylint.yml  release.yml  ruff.yml
.kiro/hooks/: update-docs-on-change.kiro.hook
.kiro/steering/: code-quality.md  development.md  structure.md  tech.md
api/: server.py
core/: config.py
core/gameplay/: games.py
core/networking/: network.py
core/observability/: metrics.py  profiler.py
docs/: MODERNIZATION.md
scripts/: install_wireguard.py  setup_project.py
scripts/windows/: install_and_run.bat  install_and_run_advanced.bat  quick_install.bat  reset_venv.bat
tests/: test_broadcast_logging.py  test_game_profiles.py  test_metrics_logging.py  test_profiling.py  test_relay_server.py
tools/dev/: check_db.py  performance_monitor.py
tools/docs/: update_readme_version.py
