[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "core*", "servers*", "game_profiles*"]

[project]
name = "lanrage"
version = "2.1.1"
description = "Zero-config mesh VPN optimized for gaming - If it runs on LAN, it runs on LANrage"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "coff33ninja", email = "coff33ninja69@gmail.com"}
]
keywords = ["vpn", "gaming", "lan", "wireguard", "mesh", "p2p", "nat-traversal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Networking",
]

dependencies = [
    # Core networking
    "wireguard-tools>=0.4.0",
    "pyroute2>=0.7.12",
    "scapy>=2.5.0",
    # NAT traversal
    "aiortc>=1.9.0",
    "aioice>=0.9.0",
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.1",
    # HTTP client
    "httpx>=0.27.0",
    # Utilities
    "pydantic>=2.10.0",
    "cryptography>=44.0.0",
    "python-dotenv>=1.0.1",
    "psutil>=6.1.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.1.0",
    # Optional: Discord Rich Presence
    "pypresence>=4.3.0",
]

[project.optional-dependencies]
dev = [
    # Code Quality
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/coff33ninja/LANRage"
Documentation = "https://github.com/coff33ninja/LANRage/tree/main/docs"
Repository = "https://github.com/coff33ninja/LANRage"
Issues = "https://github.com/coff33ninja/LANRage/issues"
Changelog = "https://github.com/coff33ninja/LANRage/blob/main/CHANGELOG.md"

[project.scripts]
lanrage = "lanrage:main"

# Ruff configuration - Modern, fast linter and formatter
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
    "C901",  # Too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py are often intentional

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=core",
    "--cov=api",
    "--cov=servers",
    "--cov-report=term-missing",
    "--cov-report=json",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["core", "api", "servers"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Pylint configuration
[tool.pylint.main]
py-version = "3.12"
jobs = 0
persistent = true
load-plugins = ""

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "import-error",
    "no-member",
    "line-too-long",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "too-many-branches",
    "too-many-statements",
    "too-many-public-methods",
    "broad-exception-caught",
    "raise-missing-from",
    "logging-fstring-interpolation",
    "wrong-import-position",
    "wrong-import-order",
    "import-outside-toplevel",
    "unnecessary-pass",
    "no-else-return",
    "no-else-raise",
    "consider-using-in",
    "consider-iterating-dictionary",
    "consider-using-dict-items",
    "redefined-outer-name",
    "unused-argument",
    "protected-access",
    "unused-variable",
    "redefined-builtin",
    "unexpected-keyword-arg",
    "no-value-for-parameter",
    "global-variable-undefined",
    "global-statement",
    "invalid-name",
    "duplicate-code",
    "cyclic-import",
    "fixme",
    "comparison-with-callable",
    "attribute-defined-outside-init",
    "subprocess-run-check",
    "unspecified-encoding",
    "reimported",
]

[tool.pylint.reports]
output-format = "colorized"
reports = "no"

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,e,f,ip,db,fd,id"
function-rgx = "[a-z_][a-z0-9_]{2,50}$"
variable-rgx = "[a-z_][a-z0-9_]{2,50}$"
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"
attr-rgx = "[a-z_][a-z0-9_]{2,50}$"
argument-rgx = "[a-z_][a-z0-9_]{2,50}$"
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{2,50}|(__.*__))$"
inlinevar-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
class-rgx = "[A-Z_][a-zA-Z0-9]+$"
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
method-rgx = "[a-z_][a-z0-9_]{2,50}$"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 2000
indent-string = "'    '"
indent-after-paren = 4

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.pylint.typecheck]
contextmanager-decorators = ["contextlib.contextmanager"]
generated-members = ""

[tool.pylint.variables]
init-import = false
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"

[tool.pylint.classes]
defining-attr-methods = ["__init__", "__new__", "setUp"]
valid-classmethod-first-arg = "cls"
valid-metaclass-classmethod-first-arg = "mcs"

[tool.pylint.design]
max-args = 7
max-attributes = 12
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 6
max-statements = 60
min-public-methods = 0

[tool.pylint.imports]
deprecated-modules = ["optparse", "tkinter.tix"]

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.Exception"]
